Fixed that goddamn Firefox scrollbar bug! Now the video show page looks fine in Firefox. I hope that you're happy, Mr. Mozilla with your sparkly flaming ginger fox.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,13 +14,14 @@
 
 ::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 7px;
-}
+    width: 7px; }
+
 ::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: black;
-    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
-}
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5); }
+
+::-webkit-scrollbar { opacity: 0; }
 
 html { overflow-x: hidden; }
 
